--- a/index.html
+++ b/index.html
@@ -312,7 +312,7 @@
 
             </div>
             
-            <a href="https://maps.app.goo.gl/vATNcknH6woJzhbV7" target="_blank" class="btn btn-success" style="font-weight: bold;">Get
+            <a href="https://maps.app.goo.gl/cBwF1Lc9DEorzWAH9" target="_blank" class="btn btn-success" style="font-weight: bold;">Get
                 Directions</a>
         </div>
     </div>
